--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3325,5 +3325,19 @@
         </activity>
 
         <!-- This is the longest AndroidManifest.xml ever. -->
+        <activity android:name=".Settings$RainbowUnicornActivity"
+                  android:label="@string/xperience_settings_title"
+                  android:icon="@drawable/ic_homepage_xperience"
+                  android:taskAffinity="com.android.settings">
+            <intent-filter android:priority="-1">
+                <action android:name="com.android.settings.action.SETTINGS"/>
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                       android:value="com.android.settings.category.ia.homepage"/>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="mx.xperience.rainbowunicorn.RainbowUnicorn"/>
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/xperience_settings_summary"/>
+        </activity>
     </application>
 </manifest>
